# Teamlens-web

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  README.md  RECORDING_FEATURE_SPEC.md  docker-compose.yml  package-lock.json  package.json  schema.sql  tsconfig.json
.github/workflows/: agent-build.yml  build.yml  deploy.yml
agent/: AGENT_AUTO_UPDATE.md  package-lock.json  package.json
agent/scripts/: generate-updater-json.py
agent/src/: App.css  App.tsx  liveScreen.ts
agent/src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
agent/src-tauri/capabilities/: default.json
agent/src-tauri/src/: lib.rs
alert-service/: Dockerfile  go.mod  go.sum  main.go
alert-service/api/: rules.go  (+1 more)
backend-go/: Dockerfile  go.mod  go.sum
backend-ws/: .env  Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/: DEPLOYMENT.md  Dockerfile  README.md  build.bat  build.sh  deploy.ps1  deploy.sh  docker-compose.yml  package.json
mobile/: .env.example  .gitignore  App.js  app.json  eas.json  package-lock.json  package.json
nginx/: default.conf
prisma/: schema.prisma  seed.js
screenshot-ai/: .env.example  .gitignore  Dockerfile  README.md  config.py  daily_report_generator.py  database_manager.py  main.py  requirements.txt  screenshot_analyzer.py
scripts/: check-endpoints.js  deploy-remote.sh  start.sh
src/: app.d.ts.map  app.js.map  app.ts  index.d.ts.map  index.js.map  index.ts  mainRoutes.d.ts.map  mainRoutes.js.map  mainRoutes.ts  socket.d.ts  socket.d.ts.map  socket.js  socket.js.map  socket.ts
(+247 files in other folders)
