[package]
name = "desktop-agent"
version = "0.1.46"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "2"
device_query = "2"
scrap = "0.5"
image = "0.24"
chrono = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
] }
uiautomation = "0.25.0"
